<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#161824"
    tools:context=".allfragments.wodeFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/plus"
        android:id="@+id/Top_Background"
        android:scaleType="fitXY"
        tools:ignore="InvalidId" />
    <RelativeLayout
        android:orientation="horizontal"
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <ImageView
            android:id="@+id/head_Img"
            android:layout_marginTop="5dp"
            android:src="@drawable/p2"
            android:layout_marginLeft="20dp"
            android:layout_width="90dp"
            android:layout_height="90dp" />
        <Button
            android:id="@+id/edit_Res"
            android:layout_marginTop="30dp"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:text="@string/edit_Res"
            android:layout_marginLeft="20dp"
            android:background="@color/cardview_dark_background"
            android:textColor="@color/cardview_light_background"
            android:layout_toRightOf="@id/head_Img"
            tools:ignore="PrivateResource"
            android:layout_toEndOf="@id/head_Img" />
        <Button
            android:id="@+id/add_Friends"
            android:layout_marginTop="30dp"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/add_Friends"
            android:layout_marginLeft="8dp"
            android:background="@color/cardview_dark_background"
            android:textColor="@color/cardview_light_background"
            android:layout_toRightOf="@id/edit_Res"
            tools:ignore="PrivateResource"
            android:layout_toEndOf="@id/edit_Res" />
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="200dp"
        android:text="@string/user_Name"
        android:textColor="@color/ivory"
        android:textSize="30sp"
        android:layout_marginLeft="20dp"
        android:id="@+id/user_Name"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="240dp"
        android:text="@string/Tiktok_ID"
        android:textColor="@color/ivory"
        android:layout_marginLeft="20dp"
        android:textSize="15sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/self_Introduction"
        android:layout_marginTop="270dp"
        android:id="@+id/self_Intro"
        android:textSize="15sp"
        android:textColor="@color/ivory"
        android:layout_marginLeft="20dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="290dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:text="@string/self_Old"
            android:textColor="@color/gainsboro"
            android:layout_marginLeft="20dp"
            android:background="@color/darkslateblue"
            android:id="@+id/self_Old"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:text="@string/Country"
            android:textColor="@color/gainsboro"
            android:layout_toRightOf="@id/self_Old"
            android:background="@color/darkslateblue"
            android:layout_marginLeft="5dp"
            android:id="@+id/Country"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:text="@string/school"
            android:textColor="@color/gainsboro"
            android:layout_toRightOf="@id/Country"
            android:background="@color/darkslateblue"
            android:layout_marginLeft="5dp"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="310dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginLeft="20dp"
            android:text="1000"
            android:textColor="@color/ivory"
            android:textSize="20dp"
            android:id="@+id/numOfReceivedPraise"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_toRightOf="@id/numOfReceivedPraise"
            android:layout_marginLeft="2dp"
            android:text="@string/received_Praise"
            android:textSize="20dp"
            android:textColor="@color/gainsboro"
            android:id="@+id/received_Praise"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginLeft="20dp"
            android:text="200"
            android:textColor="@color/ivory"
            android:textSize="20dp"
            android:id="@+id/numOfYourAttention"
            android:layout_toRightOf="@id/received_Praise"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_toRightOf="@id/numOfYourAttention"
            android:layout_marginLeft="2dp"
            android:text="@string/your_Attention"
            android:textSize="20dp"
            android:textColor="@color/gainsboro"
            android:id="@+id/yourAttention"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginLeft="20dp"
            android:text="500"
            android:textColor="@color/ivory"
            android:textSize="20dp"
            android:id="@+id/numOfYourFens"
            android:layout_toRightOf="@id/yourAttention"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_toRightOf="@id/numOfYourFens"
            android:layout_marginLeft="2dp"
            android:text="@string/your_Fens"
            android:textSize="20dp"
            android:textColor="@color/gainsboro"
            />
    </RelativeLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="364dp"
        android:orientation="vertical"
        android:background="#161824"
        android:layout_marginTop="312dp">

        <TableLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="676dp"
        android:background="#010101"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/shouye_tab"
            style="@style/Custom.TabRadioButton"
            android:checked="true"
            android:text="首页" />
        <RadioButton
            android:id="@+id/guanzhu_tab"
            style="@style/Custom.TabRadioButton"
            android:text="关注" />
        <LinearLayout
            android:id="@+id/plus_tab"
            style="@style/Custom.TabRadioButton"
            android:padding="10dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/plus"/>
        </LinearLayout>
        <RadioButton
            android:id="@+id/xiaoxi_tab"
            style="@style/Custom.TabRadioButton"
            android:text="消息" />
        <RadioButton
            android:id="@+id/wode_tab"
            style="@style/Custom.TabRadioButton"
            android:text="我的" />
    </RadioGroup>
</FrameLayout>